# adi

./: .gitignore  Cargo.toml  design.md  ida_ghidra.md  journal.md  notes.md  readme.md
src/: analysis.rs  arch.rs  dataflow.rs  disasm.rs  ir.rs  lib.rs  main.rs  memory.rs  platform.rs  program.rs
src/analysis/: func.rs  mod.rs  types.rs
src/arch/: error.rs  gb.rs  mod.rs  mos65xx.rs  print.rs  template.md  toy.rs
src/arch/gb/: descs.rs  interp.rs  mod.rs  tests.rs
src/arch/mos65xx/: descs.rs  interp.rs  ir.rs  mod.rs  opcodes.rs  tests.rs
src/arch/toy/: builder.rs  ir.rs
src/disasm/: arch.rs  error.rs  mod.rs  platform.rs  types.rs
src/disasm/arch/: mos65xx.rs
src/disasm/arch/mos65xx/: descs.rs  opcode_table.rs  opcodes.rs  tests.rs  types.rs
src/disasm/platform/: mod.rs  nes.rs
src/ir/: builder.rs  constprop.rs  defuse.rs  dom.rs  dse.rs  inst.rs  interp.rs  ssa.rs
src/memory/: config.rs  ea.rs  image.rs  locref.rs  manager.rs  map.rs  mmu.rs  mod.rs  names.rs  newtypes.rs  refmap.rs  region.rs  segment.rs  spans.rs  tests.rs  types.rs  va.rs
src/platform/: gb.rs  mod.rs  nes.rs  nes_mappers.md  toy.rs
src/program/: analysis.rs  bb.rs  data.rs  func.rs  inst.rs  mod.rs  namemap.rs  refmap.rs
src/program/analysis/: misc.rs  pass_jumptable.rs  pass_newfunc.rs  pass_refs.rs  pass_splitfunc.rs  pass_statechange.rs  pass_staticfuncanalysis.rs
