[package]
name = "adi"
version = "0.1.0"
authors = ["Jarrett Billingsley <jarrett.billingsley@gmail.com>"]
edition = "2018"
description = "A RE (reverse engineering) framework aimed at software for retro 8- and 16-bit machines."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.2.0"
colored = "2.0.0"
err-derive = "0.2.4"
generational-arena = "0.2.8"
lazy_static = "1.4.0"
parse-display = "0.1.2"
simplelog = "0.9.0"
log = "0.4.11"
delegate = "0.5.0"
nes_rom = "0.1.0"