[package]
name = "adi"
version = "0.1.0"
authors = ["Jarrett Billingsley <jarrett.billingsley@gmail.com>"]
edition = "2018"
description = "A RE (reverse engineering) framework aimed at software for retro 8- and 16-bit machines."
default-run = "adi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic       = "0.2.0"
bitflags           = "1.2.1"
colored            = "2.0.0"
delegate           = "0.5.0"
enum_dispatch      = "0.3.4"
err-derive         = "0.2.4"
generational-arena = "0.2.8"
lazy_static        = "1.4.0"
log                = "0.4.11"
nes_rom            = "0.1.0"
parse-display      = "0.1.2"
simplelog          = "0.9.0"
smallvec           = "1.5.1"
petgraph           = "0.6.0"
lazycell           = "1.3.0"